[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "sanic-metrics"
description = "Sanic plugin for capturing and logging access"
version = "0.0.6"
authors = ["Ashley Sommer <ashleysommer@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/ashleysommer/sanic-metrics"

[tool.poetry.dependencies]
python = "^3.6"
sanic = ">=18.12.0"
sanic-plugins-framework = ">=0.9.2,<0.10"
python-dotenv = "^0.10.0"
aiofiles="^0.4.0"

[tool.poetry.plugins]

[tool.poetry.plugins."sanic_plugins"]
"SanicMetrics" = "sanic_metrics.plugin:instance"
