[build-system]
requires = ["poetry-core>=1.0.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sanic-metrics"
description = "Sanic plugin for capturing and logging access"
version = "0.0.8"
authors = ["Ashley Sommer <ashleysommer@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/ashleysommer/sanic-metrics"

[tool.poetry.dependencies]
python = "^3.7"
sanic = ">=21.3.1,<22"
sanic-plugin-toolkit = ">=1.2.0"
python-dotenv = "^0.10.0"
aiofiles=">=0.4.0,<0.7.0"

[tool.poetry.plugins]

[tool.poetry.plugins."sanic_plugins"]
"SanicMetrics" = "sanic_metrics.plugin:instance"
